--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><img class="img-responsive" src="img/ep-logo.png" style="width: 23px;" alt=""></a>
+                <a class="navbar-brand" href="#page-top"><img class="img-responsive"  src="img/logo.png" style="width: 80px;" alt=""></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
@@ -62,43 +62,54 @@
         <img src="img/contact-banner.jpg" width="100%" alt="Arctica Food" style="margin: auto;display: block;" onload="imgLoaded(this)">
     </div>
     <div class="container animated bounceInUp">
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">您的姓名</label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
+        <div class="clear-fix" style="margin: auto;width: 1000px;" >
+            <div style="width: 500px;float: left;padding-top: 25px">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">您的姓名</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="inputEmail3" placeholder="请输入姓名">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">常用邮箱</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="inputPassword3" placeholder="请输入邮箱">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">手机号码</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="inputPassword3" placeholder="请输入手机号码">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">QQ</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="inputPassword3" placeholder="请输入QQ">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">留言内容</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="inputPassword3" placeholder="请输入留言内容">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-default">提交</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">常用邮箱</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
+            <div style="width: 500px;float: left;padding-left: 50px">
+                <h3>Ping Holdings (Canada) Corp.</h3>
+                <h3>浩平控股（加拿大）有限公司</h3>
+                电话：001-604-5537678；001-778-3168876<br>
+                地址 2227 Hartley Avenue, Coquitlam, British Columbia, Canada
+                <img src="img/wechat.jpeg" width="100" style="margin: auto;display: block;padding-top: 20px">
             </div>
-            <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">手机号码</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">QQ</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">留言内容</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">提交</button>
-                </div>
-            </div>
-        </form>
+        </div>
     </div>
 
 
@@ -106,67 +117,42 @@
 
 <footer class="main-footer">
     <div class="container">
+        <div class="row" style="text-align: center">
+            <div class="col-sm-4">
+                <div class="widget">
+                    <h4 class="title">关于我们</h4>
+                    <div class="content">
+                        浩平控股（加拿大）有限公司<br/>
+                        Ping Holdings (Canada) Corp.
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="widget">
+                    <h4 class="title">联系方式</h4>
+                    <div class="content">
+                        电话：001-604-5537678；001-778-3168876<br/>
+                        地址：2227 Hartley Avenue, Coquitlam, British Columbia, Canada
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="widget">
+                    <h4 class="title">友情合作</h4>
+                    <div class="content">
+                        加拿大民航快递
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row">
-            <div class="col-sm-4">
-                <div class="widget">
-                    <h4 class="title">友情链接</h4>
-                    <div class="content friend-links">
-                        <a href="http://www.bootcss.com/" title="Bootstrap中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Bootstrap中文网'])" target="_blank">Bootstrap中文网</a>
-                        <a href="http://www.golaravel.com/" title="Laravel中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Laravel中文网'])" target="_blank">Laravel中文网</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="widget">
-                    <h4 class="title">联系我们</h4>
-                    <div class="content tag-cloud">
-                        <a href="http://www.bootcss.com/" title="Bootstrap中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Bootstrap中文网'])" target="_blank">Bootstrap</a>
-                        <a href="http://www.ghostchina.com/" title="Ghost中国"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Ghost中国'])" target="_blank">Ghost</a>
-                        <a href="http://www.bootcdn.cn/" title="BootCDN"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'BootCDN'])" target="_blank">BootCDN</a>
-                        <a href="http://www.gruntjs.net/" title="Grunt中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Grunt中文网'])" target="_blank">Grunt</a>
-                        <a href="http://www.jquery123.com/" title="jQuery中文文档"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'jQuery中文文档'])"
-                           target="_blank">jQuery</a>
-                        <a href="http://babeljs.cn/" title="Babeljs中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Babeljs中文网'])"
-                           target="_blank">Babeljs</a>
-                        <a href="http://lodashjs.com/" title="lodash中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Lodash中文网'])" target="_blank">Lodash</a>
-                        <a href="http://www.gulpjs.com.cn/" title="Gulp中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Gulp中文网'])" target="_blank">Gulp</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="widget">
-                    <h4 class="title">赞助商</h4>
-                    <div class="content friend-links">
-                        <a href="https://www.upyun.com/" title="又拍云"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', '又拍云'])" target="_blank">又拍云</a>
-                    </div>
-                </div>
+            <div class="col-sm-12" style="text-align: center;font-size: 13px;margin-top: 20px;">
+                <span>Copyright © Ping Holdings (Canada) Corp.</span> |
+                <span>Tertech提供技术支持</span>
             </div>
         </div>
     </div>
 </footer>
-<div class="copyright">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <span>Copyright © <a href="http://expo.bootcss.com">优站精选</a></span> |
-                <span><a href="http://www.miibeian.gov.cn/" target="_blank">京ICP备11008151号</a></span>
-            </div>
-        </div>
-    </div>
-</div>
 <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/handlebars.js/3.0.3/handlebars.min.js"></script>
 </body>
