--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><img class="img-responsive" src="img/ep-logo.png" style="width: 23px;" alt=""></a>
+                <a class="navbar-brand" href="#page-top"><img class="img-responsive" src="img/logo.png" style="width: 80px;" alt=""></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
@@ -60,21 +60,24 @@
 
 <main class="main" role="main">
     <div id="banner-first" class="container" style="width: 100%">
-        <img class="animated fadeIn" src="img/store_logo.jpg" width="700" alt="Arctica Food" style="margin: auto;display: block;" onload="imgLoaded(this)">
+        <img class="animated fadeIn" src="img/store_logo.png" width="700" alt="Arctica Food" style="margin: auto;display: block;" onload="imgLoaded(this)">
     </div>
-    <div class="container" style="width: 100%">
+    <div class="container" style="width: 100%;margin-bottom: 20px;">
         <div class="banner-half clear-fix">
             <img class="animated bounceInLeft" id="banner-second" src="img/banner-sec-left.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
             <img class="animated bounceInRight" src="img/product-best.jpg" width="400" alt="Arctica Food" style="float: left;" onload="imgLoaded(this)">
         </div>
     </div>
-    <div class="container" style="width: 100%">
+    <div class="container" style="width: 100%;margin-bottom: 20px;">
         <div class="banner-half clear-fix" >
             <img class="animated bounceInLeft" src="img/product-classic.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
             <img class="animated bounceInRight" src="img/product-great.jpg" width="400" alt="Arctica Food" style="float: left;" onload="imgLoaded(this)">
         </div>
+        <div class="banner-half clear-fix" >
+            <a href="/product.html" style="display: block;text-align: center"><h4>点击查看我们的产品</h4></a>
+        </div>
     </div>
-    <div class="container" style="width: 100%">
+    <div class="container" style="width: 100%;margin-bottom: 20px;">
         <div class="banner-half clear-fix" >
             <img class="animated bounceInLeft" src="img/product-great.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
             <div class="animated bounceInRight" style="width: 400px;float: left;">
@@ -91,71 +94,52 @@
             </div>
         </div>
     </div>
+    <div class="container" style="width: 100%;margin-bottom: 20px;">
+        <div class="banner-half clear-fix">
+            <img class="animated bounceInLeft" src="img/right-people.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
+            <img class="animated bounceInRight" src="img/method.png" width="400" alt="Arctica Food" style="float: left;" onload="imgLoaded(this)">
+        </div>
+    </div>
 </main>
 
 <footer class="main-footer">
     <div class="container">
+        <div class="row" style="text-align: center">
+            <div class="col-sm-4">
+                <div class="widget">
+                    <h4 class="title">关于我们</h4>
+                    <div class="content">
+                        浩平控股（加拿大）有限公司<br/>
+                        Ping Holdings (Canada) Corp.
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="widget">
+                    <h4 class="title">联系方式</h4>
+                    <div class="content">
+                        电话：001-604-5537678；001-778-3168876<br/>
+                        地址：2227 Hartley Avenue, Coquitlam, British Columbia, Canada
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="widget">
+                    <h4 class="title">友情合作</h4>
+                    <div class="content">
+                        加拿大民航快递
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row">
-            <div class="col-sm-4">
-                <div class="widget">
-                    <h4 class="title">友情链接</h4>
-                    <div class="content friend-links">
-                        <a href="http://www.bootcss.com/" title="Bootstrap中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Bootstrap中文网'])" target="_blank">Bootstrap中文网</a>
-                        <a href="http://www.golaravel.com/" title="Laravel中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Laravel中文网'])" target="_blank">Laravel中文网</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="widget">
-                    <h4 class="title">联系我们</h4>
-                    <div class="content tag-cloud">
-                        <a href="http://www.bootcss.com/" title="Bootstrap中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Bootstrap中文网'])" target="_blank">Bootstrap</a>
-                        <a href="http://www.ghostchina.com/" title="Ghost中国"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Ghost中国'])" target="_blank">Ghost</a>
-                        <a href="http://www.bootcdn.cn/" title="BootCDN"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'BootCDN'])" target="_blank">BootCDN</a>
-                        <a href="http://www.gruntjs.net/" title="Grunt中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Grunt中文网'])" target="_blank">Grunt</a>
-                        <a href="http://www.jquery123.com/" title="jQuery中文文档"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'jQuery中文文档'])"
-                           target="_blank">jQuery</a>
-                        <a href="http://babeljs.cn/" title="Babeljs中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Babeljs中文网'])"
-                           target="_blank">Babeljs</a>
-                        <a href="http://lodashjs.com/" title="lodash中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Lodash中文网'])" target="_blank">Lodash</a>
-                        <a href="http://www.gulpjs.com.cn/" title="Gulp中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Gulp中文网'])" target="_blank">Gulp</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="widget">
-                    <h4 class="title">赞助商</h4>
-                    <div class="content friend-links">
-                        <a href="https://www.upyun.com/" title="又拍云"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', '又拍云'])" target="_blank">又拍云</a>
-                    </div>
-                </div>
+            <div class="col-sm-12" style="text-align: center;font-size: 13px;margin-top: 20px;">
+                <span>Copyright © Ping Holdings (Canada) Corp.</span> |
+                <span>Tertech提供技术支持</span>
             </div>
         </div>
     </div>
 </footer>
-<div class="copyright">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <span>Copyright © <a href="http://expo.bootcss.com">优站精选</a></span> |
-                <span><a href="http://www.miibeian.gov.cn/" target="_blank">京ICP备11008151号</a></span>
-            </div>
-        </div>
-    </div>
-</div>
 <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/handlebars.js/3.0.3/handlebars.min.js"></script>
 </body>
