--- a/src/main/resources/static/product.html
+++ b/src/main/resources/static/product.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><img class="img-responsive" src="img/ep-logo.png" style="width: 23px;" alt=""></a>
+                <a class="navbar-brand" href="#page-top"><img class="img-responsive"  src="img/logo.png" style="width: 80px;" alt=""></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
@@ -60,7 +60,7 @@
 
 <main class="main" role="main">
 
-    <div class="animated zoomIn" class="container" style="width: 100%">
+    <div class="animated zoomIn" class="container" style="width: 100%;margin-bottom: 20px;">
         <div class="banner-half clear-fix" >
             <img src="img/product-best.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
             <div style="width: 400px;float: left;">
@@ -80,7 +80,7 @@
             </div>
         </div>
     </div>
-    <div class="animated bounceInLeft" class="container" style="width: 100%">
+    <div class="animated bounceInLeft" class="container" style="width: 100%;margin-bottom: 20px;">
         <div class="banner-half clear-fix" >
             <img src="img/product-classic.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
             <div style="width: 400px;float: left;">
@@ -100,7 +100,7 @@
             </div>
         </div>
     </div>
-    <div class="animated bounceInLeft" class="container" style="width: 100%">
+    <div class="animated bounceInLeft" class="container" style="width: 100%;margin-bottom: 20px;">
         <div class="banner-half clear-fix" >
             <img src="img/product-great.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
             <div style="width: 400px;float: left;">
@@ -120,9 +120,31 @@
             </div>
         </div>
     </div>
-    <div class="animated bounceInLeft" class="container" style="width: 100%">
+    <div class="animated bounceInLeft" class="container" style="width: 100%;margin-bottom: 30px;">
+        <div class="banner-half clear-fix" style="width: 910px">
+            <img src="img/product-package.jpg" width="500" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
+            <div style="width: 400px;float: left;">
+                <h3>100%加拿大北极野生海参</h3>
+                <h4>等级：</h4>
+                特级参王（Premium）
+                <h4>重量：</h4>
+                250克+／盒（8头）
+                <h4>头数：</h4>
+                每磅15头（+／-）
+                <h4>描述：</h4>
+                参体属于巨型参王，外形饱满完整，表面色泽均匀，形状整齐，均为最有营养价值的成年海参
+                <h4>零售价格：</h4>
+                ¥1299／盒  包邮费从加拿大直邮到中国
+                <h4>生产商：</h4>
+                Arctica Food Group Canada Inc.
+                <h4>经销商：</h4>
+                Ping Holdings（Canada）Corp.
+            </div>
+        </div>
+    </div>
+    <div class="animated bounceInLeft" class="container" style="width: 100%;margin-bottom: 20px;">
         <div class="clear-fix" style="margin: auto;width: 1010px;" >
-            <img src="img/product-gift.jpg" width="500" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
+            <img src="img/choose-reason.jpg" width="500" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
             <div style="width: 500px;float: left;">
                 <h3>为什么选择Arctica Food北极野生海参</h3>
                 （1）Arctica Food北极野生海参在纯天然野生环境下生长，其捕捞也是直接在纯天然海域中完成。
@@ -140,10 +162,10 @@
             </div>
         </div>
     </div>
-    <div class="animated bounceInRight" class="container" style="width: 100%">
+    <div class="animated bounceInRight" class="container" style="width: 100%;margin-bottom: 20px;">
         <div class="clear-fix" style="margin: auto;width: 1010px;" >
             <img src="img/quality.jpg" width="500" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
-            <div style="width: 500px;float: left;">
+            <div style="width: 500px;float: left;font-size: 16px;line-height: 36px;">
                 <h3>为什么Arctica Food北极野生海参营养价值高</h3>
                 Arctica Food所提供的北极野生海参产于加拿大东部的北大西洋与北冰洋交界水域深水区。
                 该水域常年气温低冷，表层年最高水温不超过14℃，冬季水面结冰长达数月，终年人迹罕至，无工业和其他污染，
@@ -156,7 +178,7 @@
             </div>
         </div>
     </div>
-    <div class="animated bounceInUp" class="container" style="width: 100%">
+    <div class="animated bounceInUp" class="container" style="width: 100%;margin-bottom: 20px;">
         <div class="clear-fix" style="margin: auto;width: 610px;" >
             <img src="img/canada-flag.jpg" width="100" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
             <div style="width: 500px;float: left;">
@@ -170,67 +192,42 @@
 
 <footer class="main-footer">
     <div class="container">
+        <div class="row" style="text-align: center">
+            <div class="col-sm-4">
+                <div class="widget">
+                    <h4 class="title">关于我们</h4>
+                    <div class="content">
+                        浩平控股（加拿大）有限公司<br/>
+                        Ping Holdings (Canada) Corp.
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="widget">
+                    <h4 class="title">联系方式</h4>
+                    <div class="content">
+                        电话：001-604-5537678；001-778-3168876<br/>
+                        地址：2227 Hartley Avenue, Coquitlam, British Columbia, Canada
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="widget">
+                    <h4 class="title">友情合作</h4>
+                    <div class="content">
+                        加拿大民航快递
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row">
-            <div class="col-sm-4">
-                <div class="widget">
-                    <h4 class="title">友情链接</h4>
-                    <div class="content friend-links">
-                        <a href="http://www.bootcss.com/" title="Bootstrap中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Bootstrap中文网'])" target="_blank">Bootstrap中文网</a>
-                        <a href="http://www.golaravel.com/" title="Laravel中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Laravel中文网'])" target="_blank">Laravel中文网</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="widget">
-                    <h4 class="title">联系我们</h4>
-                    <div class="content tag-cloud">
-                        <a href="http://www.bootcss.com/" title="Bootstrap中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Bootstrap中文网'])" target="_blank">Bootstrap</a>
-                        <a href="http://www.ghostchina.com/" title="Ghost中国"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Ghost中国'])" target="_blank">Ghost</a>
-                        <a href="http://www.bootcdn.cn/" title="BootCDN"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'BootCDN'])" target="_blank">BootCDN</a>
-                        <a href="http://www.gruntjs.net/" title="Grunt中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Grunt中文网'])" target="_blank">Grunt</a>
-                        <a href="http://www.jquery123.com/" title="jQuery中文文档"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'jQuery中文文档'])"
-                           target="_blank">jQuery</a>
-                        <a href="http://babeljs.cn/" title="Babeljs中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Babeljs中文网'])"
-                           target="_blank">Babeljs</a>
-                        <a href="http://lodashjs.com/" title="lodash中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Lodash中文网'])" target="_blank">Lodash</a>
-                        <a href="http://www.gulpjs.com.cn/" title="Gulp中文网"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', 'Gulp中文网'])" target="_blank">Gulp</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-4">
-                <div class="widget">
-                    <h4 class="title">赞助商</h4>
-                    <div class="content friend-links">
-                        <a href="https://www.upyun.com/" title="又拍云"
-                           onclick="_hmt.push(['_trackEvent', 'link', 'click', '又拍云'])" target="_blank">又拍云</a>
-                    </div>
-                </div>
+            <div class="col-sm-12" style="text-align: center;font-size: 13px;margin-top: 20px;">
+                <span>Copyright © Ping Holdings (Canada) Corp.</span> |
+                <span>Tertech提供技术支持</span>
             </div>
         </div>
     </div>
 </footer>
-<div class="copyright">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <span>Copyright © <a href="http://expo.bootcss.com">优站精选</a></span> |
-                <span><a href="http://www.miibeian.gov.cn/" target="_blank">京ICP备11008151号</a></span>
-            </div>
-        </div>
-    </div>
-</div>
 <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/handlebars.js/3.0.3/handlebars.min.js"></script>
 </body>
