--- a/src/main/resources/static/product.html
+++ b/src/main/resources/static/product.html
@@ -7,6 +7,7 @@
     <meta name="description" content="加拿大健康食品网">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="css/index.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
@@ -38,19 +39,22 @@
 <div class="header" style="height: 70px;">
     <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #337ab7;border-bottom: #337ab7;">
         <div class="container" >
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target="#navbar-collapse-menu">
+                    <span class="sr-only">切换导航</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top"><img class="img-responsive"  src="img/logo.png" style="width: 80px;" alt=""></a>
+                <a class="navbar-brand" href="#page-top">
+                    <img class="img-responsive" src="img/logo.png" style="width: 80px;">
+                </a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="navbar-collapse-menu">
                 <ul class="nav navbar-nav">
-                    <li><a href="/index.html">首页</a></li>
-                    <li class="active"><a href="/product.html">产品介绍</a></li>
+                    <li class="active"><a href="/index.html">首页</a></li>
+                    <li><a href="/product.html">产品介绍</a></li>
                     <li><a href="/contact.html">联系我们</a></li>
                 </ul>
             </div>
@@ -59,135 +63,161 @@
 </div>
 
 <main class="main" role="main">
-
-    <div class="animated zoomIn" class="container" style="width: 100%;margin-bottom: 20px;">
-        <div class="banner-half clear-fix" >
-            <img src="img/product-best.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
-            <div style="width: 400px;float: left;">
-                <h3>100%加拿大北极野生海参</h3>
-                <h4>等级：</h4>
-                金标精品级（Best select）
-                <h4>重量：</h4>
-                454克／袋（1磅）
-                <h4>描述：</h4>
-                规格XL，参体属于特大型，外形饱满完整，表面色泽和形状较均匀，整体品质优等
-                <h4>零售价格：</h4>
-                ¥1399／袋  包邮费从加拿大直邮到中国
-                <h4>生产商：</h4>
-                Arctica Food Group Canada Inc.
-                <h4>经销商：</h4>
-                Ping Holdings（Canada）Corp.
+    <div class="container-fluid">
+        <div class="row animated zoomIn">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-4">
+                <img src="img/product-best.jpg" width="100%" alt="Arctica Food" onload="imgLoaded(this)">
             </div>
+            <div class="col-sm-4">
+                <p>
+                    <h3>100%加拿大北极野生海参</h3>
+                    <h4>等级：</h4>
+                    金标精品级（Best select）
+                    <h4>重量：</h4>
+                    454克／袋（1磅）
+                    <h4>描述：</h4>
+                    规格XL，参体属于特大型，外形饱满完整，表面色泽和形状较均匀，整体品质优等
+                    <h4>零售价格：</h4>
+                    ¥1399／袋  包邮费从加拿大直邮到中国
+                    <h4>生产商：</h4>
+                    Arctica Food Group Canada Inc.
+                    <h4>经销商：</h4>
+                    Ping Holdings（Canada）Corp.
+                </p>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+        <div class="row animated bounceInLeft">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-4">
+                <img src="img/product-classic.jpg" width="100%" alt="Arctica Food" onload="imgLoaded(this)">
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <h3>100%加拿大北极野生海参</h3>
+                    <h4>等级：</h4>
+                    银标经典级（Classic）
+                    <h4>重量：</h4>
+                    454克／袋（1磅）
+                    <h4>描述：</h4>
+                    规格L，参体属于大型，外形饱满完整，表面色泽和形状有差异，整体品质优良
+                    <h4>零售价格：</h4>
+                    ¥1199／袋  包邮费从加拿大直邮到中国
+                    <h4>生产商：</h4>
+                    Arctica Food Group Canada Inc.
+                    <h4>经销商：</h4>
+                    Ping Holdings（Canada）Corp.
+                </p>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+        <div class="row animated bounceInLeft">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-4">
+                <img src="img/product-great.jpg" width="100%" alt="Arctica Food" onload="imgLoaded(this)">
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <h3>100%加拿大北极野生海参</h3>
+                    <h4>等级：</h4>
+                    实惠超值级（Great Value）
+                    <h4>重量：</h4>
+                    454克／袋（1磅）
+                    <h4>描述：</h4>
+                    规格M，参体属于中型，外形饱满完整，表面色泽和形状有差异，大小不等，整体品质自然级，经济实惠
+                    <h4>零售价格：</h4>
+                    ¥999／袋  包邮费从加拿大直邮到中国
+                    <h4>生产商：</h4>
+                    Arctica Food Group Canada Inc.
+                    <h4>经销商：</h4>
+                    Ping Holdings（Canada）Corp.
+                </p>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+        <div class="row animated bounceInLeft">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-4">
+                <img src="img/product-package.jpg" width="100%" alt="Arctica Food" onload="imgLoaded(this)">
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <h3>100%加拿大北极野生海参</h3>
+                    <h4>等级：</h4>
+                    特级参王（Premium）
+                    <h4>重量：</h4>
+                    250克+／盒（8头）
+                    <h4>头数：</h4>
+                    每磅15头（+／-）
+                    <h4>描述：</h4>
+                    参体属于巨型参王，外形饱满完整，表面色泽均匀，形状整齐，均为最有营养价值的成年海参
+                    <h4>零售价格：</h4>
+                    ¥1299／盒  包邮费从加拿大直邮到中国
+                    <h4>生产商：</h4>
+                    Arctica Food Group Canada Inc.
+                    <h4>经销商：</h4>
+                    Ping Holdings（Canada）Corp.
+                </p>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+        <div class="row animated bounceInLeft">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-4">
+                <img src="img/choose-reason.jpg" width="100%" alt="Arctica Food" onload="imgLoaded(this)">
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <h3>为什么选择Arctica Food北极野生海参</h3>
+                    （1）Arctica Food北极野生海参在纯天然野生环境下生长，其捕捞也是直接在纯天然海域中完成。
+                    我们提供的成品没有添加任何其他海参常见的辅料：盐，糖，防腐剂，着色剂，明胶，及其他成分。
+                    干制海参仅保留了野生环境中海水自带的盐分，而经过食用前发泡清洗，海参中的盐分接近于零，称得上名副其实的淡干野生海参。<br/>
+                    （2）Arctica Food产品是头尾双头开整体海参，整体海参加工工艺是Arctica Food首创的技术，
+                    其有点是既完全去除了海参体内的内脏和泥沙等杂质，还保留了海参的完整形态。Arctica Food产品的色泽黝黑，
+                    个体均匀，结实而有光泽，体表无盐霜。<br/>
+                    （3）Arctica Food出品的海参个体坚硬，不易掰开，有分量，十足干，敲击有木炭感，掷地有弹性，有回音。<br/>
+                    （4）Arctica Food出品的海参具有独特的海洋的鲜香味。（具有腥臭味的海参绝不可能的Arctica Food公司出品）。<br/>
+                    （5）海参营养价值最高的部位是海参的筋体。Arctica Food出品的海参筋肉饱满，颜色鲜艳，如将我公司海参从横向切开，
+                    其体内无盐结晶，无泥沙内脏等杂质，断面壁厚均匀，肉质呈鲜橙色，光泽明亮。<br/>
+                    （6）Arctica Food公司的海参的泡发率是至少8倍以上。海参泡发以后，外形完整（绝不会出现掉皮，融化的现象），
+                    肉质肥厚，筋肉饱满且整齐，煮制后的海参参体有弹性，参体透亮，肉质筋道，有嚼头，口感Q<br/>
+                </p>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+        <div class="row animated bounceInRight">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-4">
+                <img src="img/quality.jpg" width="100%" alt="Arctica Food" onload="imgLoaded(this)">
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <h3>为什么Arctica Food北极野生海参营养价值高</h3>
+                    Arctica Food所提供的北极野生海参产于加拿大东部的北大西洋与北冰洋交界水域深水区。
+                    该水域常年气温低冷，表层年最高水温不超过14℃，冬季水面结冰长达数月，终年人迹罕至，无工业和其他污染，
+                    为高品质海参的繁殖生长提供理想的生态环境。在这种原生态环境中生长的北极野生海参，没有受任何污染，长年处于休眠或半休眠状态，
+                    生长周期超长，我们所提供的北极野生海参生长周期约为5-10年。北极野生海参体内所吸纳及积聚的营养物质和活性物质远优于其他野生海参及养殖海参，
+                    因此能为人体提供更加丰富，更加高质量的营养成分，对于健康发育，延缓衰老，病后康复，改善和增强体质，提高免疫力等均有显著疗效。
+                    北极野生海参由此被誉为北大西洋的奇珍，海参中的臻品。
+                </p>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+        <div class="row animated bounceInUp">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-2">
+                <img src="img/canada-flag.jpg" width="100%" alt="Arctica Food" onload="imgLoaded(this)">
+            </div>
+            <div class="col-sm-6">
+                <p>
+                    <h3>加拿大执行世界上最严格的食品安全标准</h3>
+                    Arctica Food北极野生海参的捕捞以及整个加工过程都严格按照加拿大渔业部和加拿大食品检验局（Canadian Food Inspection Agency）所颁发的各项规定进行。
+                </p>
+            </div>
+            <div class="col-sm-2"></div>
         </div>
     </div>
-    <div class="animated bounceInLeft" class="container" style="width: 100%;margin-bottom: 20px;">
-        <div class="banner-half clear-fix" >
-            <img src="img/product-classic.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
-            <div style="width: 400px;float: left;">
-                <h3>100%加拿大北极野生海参</h3>
-                <h4>等级：</h4>
-                银标经典级（Best select）
-                <h4>重量：</h4>
-                454克／袋（1磅）
-                <h4>描述：</h4>
-                规格L，参体属于大型，外形饱满完整，表面色泽和形状有差异，整体品质优良
-                <h4>零售价格：</h4>
-                ¥1199／袋  包邮费从加拿大直邮到中国
-                <h4>生产商：</h4>
-                Arctica Food Group Canada Inc.
-                <h4>经销商：</h4>
-                Ping Holdings（Canada）Corp.
-            </div>
-        </div>
-    </div>
-    <div class="animated bounceInLeft" class="container" style="width: 100%;margin-bottom: 20px;">
-        <div class="banner-half clear-fix" >
-            <img src="img/product-great.jpg" width="400" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
-            <div style="width: 400px;float: left;">
-                <h3>100%加拿大北极野生海参</h3>
-                <h4>等级：</h4>
-                实惠超值级（Great Value）
-                <h4>重量：</h4>
-                454克／袋（1磅）
-                <h4>描述：</h4>
-                规格M，参体属于中型，外形饱满完整，表面色泽和形状有差异，大小不等，整体品质自然级，经济实惠
-                <h4>零售价格：</h4>
-                ¥999／袋  包邮费从加拿大直邮到中国
-                <h4>生产商：</h4>
-                Arctica Food Group Canada Inc.
-                <h4>经销商：</h4>
-                Ping Holdings（Canada）Corp.
-            </div>
-        </div>
-    </div>
-    <div class="animated bounceInLeft" class="container" style="width: 100%;margin-bottom: 30px;">
-        <div class="banner-half clear-fix" style="width: 910px">
-            <img src="img/product-package.jpg" width="500" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
-            <div style="width: 400px;float: left;">
-                <h3>100%加拿大北极野生海参</h3>
-                <h4>等级：</h4>
-                特级参王（Premium）
-                <h4>重量：</h4>
-                250克+／盒（8头）
-                <h4>头数：</h4>
-                每磅15头（+／-）
-                <h4>描述：</h4>
-                参体属于巨型参王，外形饱满完整，表面色泽均匀，形状整齐，均为最有营养价值的成年海参
-                <h4>零售价格：</h4>
-                ¥1299／盒  包邮费从加拿大直邮到中国
-                <h4>生产商：</h4>
-                Arctica Food Group Canada Inc.
-                <h4>经销商：</h4>
-                Ping Holdings（Canada）Corp.
-            </div>
-        </div>
-    </div>
-    <div class="animated bounceInLeft" class="container" style="width: 100%;margin-bottom: 20px;">
-        <div class="clear-fix" style="margin: auto;width: 1010px;" >
-            <img src="img/choose-reason.jpg" width="500" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
-            <div style="width: 500px;float: left;">
-                <h3>为什么选择Arctica Food北极野生海参</h3>
-                （1）Arctica Food北极野生海参在纯天然野生环境下生长，其捕捞也是直接在纯天然海域中完成。
-                我们提供的成品没有添加任何其他海参常见的辅料：盐，糖，防腐剂，着色剂，明胶，及其他成分。
-                干制海参仅保留了野生环境中海水自带的盐分，而经过食用前发泡清洗，海参中的盐分接近于零，称得上名副其实的淡干野生海参。<br/>
-                （2）Arctica Food产品是头尾双头开整体海参，整体海参加工工艺是Arctica Food首创的技术，
-                其有点是既完全去除了海参体内的内脏和泥沙等杂质，还保留了海参的完整形态。Arctica Food产品的色泽黝黑，
-                个体均匀，结实而有光泽，体表无盐霜。<br/>
-                （3）Arctica Food出品的海参个体坚硬，不易掰开，有分量，十足干，敲击有木炭感，掷地有弹性，有回音。<br/>
-                （4）Arctica Food出品的海参具有独特的海洋的鲜香味。（具有腥臭味的海参绝不可能的Arctica Food公司出品）。<br/>
-                （5）海参营养价值最高的部位是海参的筋体。Arctica Food出品的海参筋肉饱满，颜色鲜艳，如将我公司海参从横向切开，
-                其体内无盐结晶，无泥沙内脏等杂质，断面壁厚均匀，肉质呈鲜橙色，光泽明亮。<br/>
-                （6）Arctica Food公司的海参的泡发率是至少8倍以上。海参泡发以后，外形完整（绝不会出现掉皮，融化的现象），
-                肉质肥厚，筋肉饱满且整齐，煮制后的海参参体有弹性，参体透亮，肉质筋道，有嚼头，口感Q<br/>
-            </div>
-        </div>
-    </div>
-    <div class="animated bounceInRight" class="container" style="width: 100%;margin-bottom: 20px;">
-        <div class="clear-fix" style="margin: auto;width: 1010px;" >
-            <img src="img/quality.jpg" width="500" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
-            <div style="width: 500px;float: left;font-size: 16px;line-height: 36px;">
-                <h3>为什么Arctica Food北极野生海参营养价值高</h3>
-                Arctica Food所提供的北极野生海参产于加拿大东部的北大西洋与北冰洋交界水域深水区。
-                该水域常年气温低冷，表层年最高水温不超过14℃，冬季水面结冰长达数月，终年人迹罕至，无工业和其他污染，
-                为高品质海参的繁殖生长提供理想的生态环境。在这种原生态环境中生长的北极野生海参，没有受任何污染，长年处于休眠或半休眠状态，
-                生长周期超长，我们所提供的北极野生海参生长周期约为5-10年。北极野生海参体内所吸纳及积聚的营养物质和活性物质远优于其他野生海参及养殖海参，
-                因此能为人体提供更加丰富，更加高质量的营养成分，对于健康发育，延缓衰老，病后康复，改善和增强体质，提高免疫力等均有显著疗效。
-                北极野生海参由此被誉为北大西洋的奇珍，海参中的臻品。
-                加拿大执行世界上最严格的食品安全标准
-                Arctica Food北极野生海参的捕捞以及整个加工过程都严格按照加拿大渔业部和加拿大食品检验局（Canadian Food Inspection Agency）所颁发的各项规定进行。
-            </div>
-        </div>
-    </div>
-    <div class="animated bounceInUp" class="container" style="width: 100%;margin-bottom: 20px;">
-        <div class="clear-fix" style="margin: auto;width: 610px;" >
-            <img src="img/canada-flag.jpg" width="100" alt="Arctica Food" style="float: left;margin-right: 10px;" onload="imgLoaded(this)">
-            <div style="width: 500px;float: left;">
-                <h3>加拿大执行世界上最严格的食品安全标准</h3>
-                Arctica Food北极野生海参的捕捞以及整个加工过程都严格按照加拿大渔业部和加拿大食品检验局（Canadian Food Inspection Agency）所颁发的各项规定进行。
-            </div>
-        </div>
-    </div>
-
 </main>
 
 <footer class="main-footer">
@@ -229,6 +259,7 @@
     </div>
 </footer>
 <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="//cdn.bootcss.com/handlebars.js/3.0.3/handlebars.min.js"></script>
 </body>
 </html>
