--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -53,9 +53,9 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-menu">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/index.html">首页</a></li>
+                    <li><a href="/index.html">首页</a></li>
                     <li><a href="/product.html">产品介绍</a></li>
-                    <li><a href="/contact.html">联系我们</a></li>
+                    <li class="active"><a href="/contact.html">联系我们</a></li>
                 </ul>
             </div>
         </div>
