--- a/src/main/resources/static/product.html
+++ b/src/main/resources/static/product.html
@@ -53,8 +53,8 @@
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse-menu">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/index.html">首页</a></li>
-                    <li><a href="/product.html">产品介绍</a></li>
+                    <li><a href="/index.html">首页</a></li>
+                    <li class="active"><a href="/product.html">产品介绍</a></li>
                     <li><a href="/contact.html">联系我们</a></li>
                 </ul>
             </div>
